--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    text-align: right;
+    text-align: left;
     background-color: #800000;
     color: #fff;
     padding: 20px;
