--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,14 @@ body {
 
 header {
     text-align: left;
-    background-color: #800000;
+    background-color: #270000cb;
     color: #fff;
     padding: 20px;
 }
 
 nav {
 	text-align: right;
-    background-color: None;
+    background-color: #270000cb;
     padding: 10px;
 }
 
