--- a/buyform.css
+++ b/buyform.css
@@ -1,10 +1,13 @@
 body {
+  background-color: black;
   font-family: Arial, sans-serif;
+  color: grey;
   margin: 0;
   padding: 20px;
 }
 
 h1 {
+  color: grey;
   text-align: center;
 }
 
@@ -14,7 +17,7 @@ form {
 }
 
 label {
-  display: block;
+ text-decoration: underline;
   margin-bottom: 10px;
 }
 
@@ -28,11 +31,14 @@ button {
   width: 100%;
   padding: 10px;
   background-color: #007bff;
-  color: #fff;
+  color: white;
   border: none;
   cursor: pointer;
 }
 
 button:hover {
   background-color: #0056b3;
+}
+.underline {
+  text-decoration: underline;
 }
